--- a/index.ipynb
+++ b/index.ipynb
@@ -327,9 +327,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.plotly.v1+json": {
+       "data": [
+        {
+         "text": [
+          "Buenos Aires",
+          "Toronto",
+          "Pyeongchang"
+         ],
+         "type": "bar",
+         "uid": "8dc3ed0c-4516-11e9-95ca-57fc975cec2a"
+        }
+       ],
+       "layout": {}
+      },
+      "text/html": [
+       "<div id=\"7f381029-9f6f-4555-a72c-b32e4f72e1f6\" style=\"height: 525px; width: 100%;\" class=\"plotly-graph-div\"></div><script type=\"text/javascript\">require([\"plotly\"], function(Plotly) { window.PLOTLYENV=window.PLOTLYENV || {};window.PLOTLYENV.BASE_URL=\"https://plot.ly\";Plotly.newPlot(\"7f381029-9f6f-4555-a72c-b32e4f72e1f6\", [{\"text\": [\"Buenos Aires\", \"Toronto\", \"Pyeongchang\"], \"type\": \"bar\", \"uid\": \"8dc6759a-4516-11e9-95ca-57fc975cec2a\"}], {}, {\"showLink\": true, \"linkText\": \"Export to plot.ly\"})});</script>"
+      ],
+      "text/vnd.plotly.v1+html": [
+       "<div id=\"7f381029-9f6f-4555-a72c-b32e4f72e1f6\" style=\"height: 525px; width: 100%;\" class=\"plotly-graph-div\"></div><script type=\"text/javascript\">require([\"plotly\"], function(Plotly) { window.PLOTLYENV=window.PLOTLYENV || {};window.PLOTLYENV.BASE_URL=\"https://plot.ly\";Plotly.newPlot(\"7f381029-9f6f-4555-a72c-b32e4f72e1f6\", [{\"text\": [\"Buenos Aires\", \"Toronto\", \"Pyeongchang\"], \"type\": \"bar\", \"uid\": \"8dc6759a-4516-11e9-95ca-57fc975cec2a\"}], {}, {\"showLink\": true, \"linkText\": \"Export to plot.ly\"})});</script>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "plotly.offline.iplot([bar_trace_first_three_pops])"
    ]
