Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -302,7 +302,7 @@
    "outputs": [],
    "source": [
     "text_values = [cities[0]['City'], cities[1]['City'], cities[2]['City']]\n",
-    "bar_trace_first_three_pops = {'type': 'bar', 'text': [text_values]}"
+    "bar_trace_first_three_pops = {'type': 'bar', 'text': text_values}"
    ]
   },
   {
@@ -327,7 +327,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -336,21 +336,19 @@
        "data": [
         {
          "text": [
-          "Buenos Aires",
-          "Toronto",
-          "Pyeongchang"
+          "['Buenos Aires', 'Toronto', 'Pyeongchang']"
          ],
          "type": "bar",
-         "uid": "d71e9164-4516-11e9-95ca-57fc975cec2a"
+         "uid": "35870470-4517-11e9-95ca-57fc975cec2a"
         }
        ],
        "layout": {}
       },
       "text/html": [
-       "<div id=\"d009fcfd-3fae-435a-9670-a7cb6cdbdf50\" style=\"height: 525px; width: 100%;\" class=\"plotly-graph-div\"></div><script type=\"text/javascript\">require([\"plotly\"], function(Plotly) { window.PLOTLYENV=window.PLOTLYENV || {};window.PLOTLYENV.BASE_URL=\"https://plot.ly\";Plotly.newPlot(\"d009fcfd-3fae-435a-9670-a7cb6cdbdf50\", [{\"text\": [\"Buenos Aires\", \"Toronto\", \"Pyeongchang\"], \"type\": \"bar\", \"uid\": \"d7215804-4516-11e9-95ca-57fc975cec2a\"}], {}, {\"showLink\": true, \"linkText\": \"Export to plot.ly\"})});</script>"
+       "<div id=\"2f4c1f7f-bcc5-4b04-abb7-383815a17933\" style=\"height: 525px; width: 100%;\" class=\"plotly-graph-div\"></div><script type=\"text/javascript\">require([\"plotly\"], function(Plotly) { window.PLOTLYENV=window.PLOTLYENV || {};window.PLOTLYENV.BASE_URL=\"https://plot.ly\";Plotly.newPlot(\"2f4c1f7f-bcc5-4b04-abb7-383815a17933\", [{\"text\": [\"['Buenos Aires', 'Toronto', 'Pyeongchang']\"], \"type\": \"bar\", \"uid\": \"3589e906-4517-11e9-95ca-57fc975cec2a\"}], {}, {\"showLink\": true, \"linkText\": \"Export to plot.ly\"})});</script>"
       ],
       "text/vnd.plotly.v1+html": [
-       "<div id=\"d009fcfd-3fae-435a-9670-a7cb6cdbdf50\" style=\"height: 525px; width: 100%;\" class=\"plotly-graph-div\"></div><script type=\"text/javascript\">require([\"plotly\"], function(Plotly) { window.PLOTLYENV=window.PLOTLYENV || {};window.PLOTLYENV.BASE_URL=\"https://plot.ly\";Plotly.newPlot(\"d009fcfd-3fae-435a-9670-a7cb6cdbdf50\", [{\"text\": [\"Buenos Aires\", \"Toronto\", \"Pyeongchang\"], \"type\": \"bar\", \"uid\": \"d7215804-4516-11e9-95ca-57fc975cec2a\"}], {}, {\"showLink\": true, \"linkText\": \"Export to plot.ly\"})});</script>"
+       "<div id=\"2f4c1f7f-bcc5-4b04-abb7-383815a17933\" style=\"height: 525px; width: 100%;\" class=\"plotly-graph-div\"></div><script type=\"text/javascript\">require([\"plotly\"], function(Plotly) { window.PLOTLYENV=window.PLOTLYENV || {};window.PLOTLYENV.BASE_URL=\"https://plot.ly\";Plotly.newPlot(\"2f4c1f7f-bcc5-4b04-abb7-383815a17933\", [{\"text\": [\"['Buenos Aires', 'Toronto', 'Pyeongchang']\"], \"type\": \"bar\", \"uid\": \"3589e906-4517-11e9-95ca-57fc975cec2a\"}], {}, {\"showLink\": true, \"linkText\": \"Export to plot.ly\"})});</script>"
       ]
      },
      "metadata": {},
