--- a/index.ipynb
+++ b/index.ipynb
@@ -311,7 +311,7 @@
    ],
    "source": [
     "text_values = [cities[0]['City'], cities[1]['City'], cities[2]['City']]\n",
-    "bar_trace_first_three_pops = {'type': 'bar', 'text'}"
+    "bar_trace_first_three_pops = {'type': 'bar', 'text':}"
    ]
   },
   {
