--- a/index.ipynb
+++ b/index.ipynb
@@ -301,7 +301,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "text_values = [\"Buenos Aires\", ]\n",
+    "text_values = [\"Buenos Aires\", \"Toronto\", :]\n",
     "bar_trace_first_three_pops = {'type': 'bar', 'text':[cities[0]['City'], cities[1]['City'], cities[2]['City']]}"
    ]
   },
