--- a/index.ipynb
+++ b/index.ipynb
@@ -297,11 +297,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
-    "text_values = [\"Buenos Aires\", \"Toronto\", \"Pyeong\"]\n",
+    "text_values = [\"Buenos Aires\", \"Toronto\", \"Pyeongchang\"]\n",
     "bar_trace_first_three_pops = {'type': 'bar', 'text':[cities[0]['City'], cities[1]['City'], cities[2]['City']]}"
    ]
   },
