--- a/index.ipynb
+++ b/index.ipynb
@@ -302,7 +302,7 @@
    "outputs": [],
    "source": [
     "text_values = [\"Buenos Aires\", \"Toronto\", \"Pyeongchang\"]\n",
-    "bar_trace_first_three_pops = {'type': 'bar', 'text':[cities[0]['City'], cities[1]['City'], cities[2]['City']]}"
+    "bar_trace_first_three_pops = {'type': 'bar', 'text':}"
    ]
   },
   {
