--- a/index.ipynb
+++ b/index.ipynb
@@ -297,12 +297,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
     "text_values = [\"Buenos Aires\", \"Toronto\", \"Pyeongchang\"]\n",
-    "bar_trace_first_three_pops = {'type': 'bar', 'x': x_values, 'text': text_values}"
+    "bar_trace_first_three_pops = {'type': 'bar', 'x': x_values, y:'text': text_values}"
    ]
   },
   {
