--- a/index.ipynb
+++ b/index.ipynb
@@ -204,7 +204,7 @@
    "outputs": [],
    "source": [
     "x_values = [cities[0]['City'], cities[1]['City'], cities[2]['City']]\n",
-    "x_value"
+    "x_values1 = [cities[0]['City'], cities[1]['City'], cities[2]['City']]"
    ]
   },
   {
