Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -203,8 +203,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "x_values = [cities[0]['City'], cities[1]['City'], cities[2]['City']]\n",
-    "x_values1 = [cities[0]['City'], cities[1]['City'], cities[2]['City']]"
+    "x_values = [cities[0]['City'], cities[1]['City'], cities[2]['City']]"
    ]
   },
   {
@@ -220,7 +219,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "y_values = [cities[0]['Population'], cities[1]['Population'], cities[2]['Population']]"
+    "y_values = [cities[0]['Population'], cities[1]['Population'], cities[2]['Population']]\n",
+    "y_values"
    ]
   },
   {
