--- a/index.ipynb
+++ b/index.ipynb
@@ -220,7 +220,7 @@
    "outputs": [],
    "source": [
     "y_values = [cities[0]['Population'], cities[1]['Population'], cities[2]['Population']]\n",
-    "y_values"
+    "y_values1 = [cities[0]['Area'], cities[1]['Population'], cities[2]['Population']]"
    ]
   },
   {
