Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -215,11 +215,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
-    "y_values = [cities[0]['Population'], cities[1]['Population'], cities[2]['Population']]\n",
+    "pop_values = [cities[0]['Population'], cities[1]['Population'], cities[2]['Population']]\n",
     "area_values = [cities[0]['Area'], cities[1]['Area'], cities[2]['Area']]"
    ]
   },
