--- a/index.ipynb
+++ b/index.ipynb
@@ -215,7 +215,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -392,7 +392,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "bar_trace_first_three_areas = {'type': 'bar', 'x': x_values, 'y': y_values1, 'text': text_values}\n",
+    "bar_trace_first_three_areas = {'type': 'bar', 'x': x_values, 'y': a_values1, 'text': text_values}\n",
     "bar_trace_first_three_pops = {'type': 'bar', 'x': x_values, 'y': y_values, 'text': text_values}"
    ]
   },
