Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -388,17 +388,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
    "source": [
-    "bar_trace_first_three_areas = {'type': 'bar', 'x': x_values, 'y': a_values1, 'text': text_values}\n",
-    "bar_trace_first_three_pops = {'type': 'bar', 'x': x_values, 'y': y_values, 'text': text_values}"
+    "bar_trace_first_three_areas = {'type': 'bar', 'x': x_values, 'y': area_values, 'text': text_values}\n",
+    "bar_trace_first_three_pops = {'type': 'bar', 'x': x_values, 'y': pop_values, 'text': text_values}"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
@@ -412,7 +412,7 @@
           "Pyeongchang"
          ],
          "type": "bar",
-         "uid": "9e75cb5e-4519-11e9-95ca-57fc975cec2a",
+         "uid": "0491e5ee-451a-11e9-95ca-57fc975cec2a",
          "x": [
           "Buenos Aires",
           "Toronto",
@@ -431,7 +431,7 @@
           "Pyeongchang"
          ],
          "type": "bar",
-         "uid": "9e75cd34-4519-11e9-95ca-57fc975cec2a",
+         "uid": "0491e8a0-451a-11e9-95ca-57fc975cec2a",
          "x": [
           "Buenos Aires",
           "Toronto",
@@ -447,10 +447,10 @@
        "layout": {}
       },
       "text/html": [
-       "<div id=\"c4fd238d-374e-44e5-b9fd-91da9f93f43e\" style=\"height: 525px; width: 100%;\" class=\"plotly-graph-div\"></div><script type=\"text/javascript\">require([\"plotly\"], function(Plotly) { window.PLOTLYENV=window.PLOTLYENV || {};window.PLOTLYENV.BASE_URL=\"https://plot.ly\";Plotly.newPlot(\"c4fd238d-374e-44e5-b9fd-91da9f93f43e\", [{\"text\": [\"Buenos Aires\", \"Toronto\", \"Pyeongchang\"], \"x\": [\"Buenos Aires\", \"Toronto\", \"Pyeongchang\"], \"y\": [2891000, 2800000, 2581000], \"type\": \"bar\", \"uid\": \"9e8870e2-4519-11e9-95ca-57fc975cec2a\"}, {\"text\": [\"Buenos Aires\", \"Toronto\", \"Pyeongchang\"], \"x\": [\"Buenos Aires\", \"Toronto\", \"Pyeongchang\"], \"y\": [4758, 2731571, 3194], \"type\": \"bar\", \"uid\": \"9e887268-4519-11e9-95ca-57fc975cec2a\"}], {}, {\"showLink\": true, \"linkText\": \"Export to plot.ly\"})});</script>"
+       "<div id=\"35c26c47-d424-4de2-a4cf-80aeacc7cbc7\" style=\"height: 525px; width: 100%;\" class=\"plotly-graph-div\"></div><script type=\"text/javascript\">require([\"plotly\"], function(Plotly) { window.PLOTLYENV=window.PLOTLYENV || {};window.PLOTLYENV.BASE_URL=\"https://plot.ly\";Plotly.newPlot(\"35c26c47-d424-4de2-a4cf-80aeacc7cbc7\", [{\"text\": [\"Buenos Aires\", \"Toronto\", \"Pyeongchang\"], \"x\": [\"Buenos Aires\", \"Toronto\", \"Pyeongchang\"], \"y\": [2891000, 2800000, 2581000], \"type\": \"bar\", \"uid\": \"049a2664-451a-11e9-95ca-57fc975cec2a\"}, {\"text\": [\"Buenos Aires\", \"Toronto\", \"Pyeongchang\"], \"x\": [\"Buenos Aires\", \"Toronto\", \"Pyeongchang\"], \"y\": [4758, 2731571, 3194], \"type\": \"bar\", \"uid\": \"049a281c-451a-11e9-95ca-57fc975cec2a\"}], {}, {\"showLink\": true, \"linkText\": \"Export to plot.ly\"})});</script>"
       ],
       "text/vnd.plotly.v1+html": [
-       "<div id=\"c4fd238d-374e-44e5-b9fd-91da9f93f43e\" style=\"height: 525px; width: 100%;\" class=\"plotly-graph-div\"></div><script type=\"text/javascript\">require([\"plotly\"], function(Plotly) { window.PLOTLYENV=window.PLOTLYENV || {};window.PLOTLYENV.BASE_URL=\"https://plot.ly\";Plotly.newPlot(\"c4fd238d-374e-44e5-b9fd-91da9f93f43e\", [{\"text\": [\"Buenos Aires\", \"Toronto\", \"Pyeongchang\"], \"x\": [\"Buenos Aires\", \"Toronto\", \"Pyeongchang\"], \"y\": [2891000, 2800000, 2581000], \"type\": \"bar\", \"uid\": \"9e8870e2-4519-11e9-95ca-57fc975cec2a\"}, {\"text\": [\"Buenos Aires\", \"Toronto\", \"Pyeongchang\"], \"x\": [\"Buenos Aires\", \"Toronto\", \"Pyeongchang\"], \"y\": [4758, 2731571, 3194], \"type\": \"bar\", \"uid\": \"9e887268-4519-11e9-95ca-57fc975cec2a\"}], {}, {\"showLink\": true, \"linkText\": \"Export to plot.ly\"})});</script>"
+       "<div id=\"35c26c47-d424-4de2-a4cf-80aeacc7cbc7\" style=\"height: 525px; width: 100%;\" class=\"plotly-graph-div\"></div><script type=\"text/javascript\">require([\"plotly\"], function(Plotly) { window.PLOTLYENV=window.PLOTLYENV || {};window.PLOTLYENV.BASE_URL=\"https://plot.ly\";Plotly.newPlot(\"35c26c47-d424-4de2-a4cf-80aeacc7cbc7\", [{\"text\": [\"Buenos Aires\", \"Toronto\", \"Pyeongchang\"], \"x\": [\"Buenos Aires\", \"Toronto\", \"Pyeongchang\"], \"y\": [2891000, 2800000, 2581000], \"type\": \"bar\", \"uid\": \"049a2664-451a-11e9-95ca-57fc975cec2a\"}, {\"text\": [\"Buenos Aires\", \"Toronto\", \"Pyeongchang\"], \"x\": [\"Buenos Aires\", \"Toronto\", \"Pyeongchang\"], \"y\": [4758, 2731571, 3194], \"type\": \"bar\", \"uid\": \"049a281c-451a-11e9-95ca-57fc975cec2a\"}], {}, {\"showLink\": true, \"linkText\": \"Export to plot.ly\"})});</script>"
       ]
      },
      "metadata": {},
